# Pieski

./: .gitignore  CMakeLists.txt  README.md  boolGen.hpp  compile_for_optilio.sh  config.py  evolution.py  prime.hpp  score.py
evolution/: evaluate.py  evolution.py  test_results.json  utils.py
evolution/evolution_results/: best_solution_gen1_sol1.cpp  best_solution_gen1_sol3.cpp  best_solution_gen1_sol4.cpp  best_solution_gen1_sol5.cpp  best_solution_gen2_sol2.cpp  best_solution_gen2_sol3.cpp  best_solution_gen2_sol4.cpp  best_solution_gen2_sol5.cpp  best_solution_gen3_sol2.cpp  best_solution_gen3_sol3.cpp  best_solution_gen3_sol4.cpp  best_solution_gen3_sol5.cpp  best_solution_gen4_sol2.cpp  best_solution_gen4_sol3.cpp  best_solution_gen4_sol4.cpp  best_solution_gen4_sol5.cpp  best_solution_gen5_sol1.cpp  best_solution_gen5_sol2.cpp  best_solution_gen5_sol3.cpp  best_solution_gen5_sol4.cpp  best_solution_gen5_sol5.cpp
evolution/prompts/: mutate_prompt.txt  problem_statement.txt  reproduce_prompt.txt
examples/: dijkstra1.cpp  dijkstra2.cpp  gpt1  gpt1.cpp  qwen.cpp  qwen2.cpp  qwen3.cpp
scoring/: config.py  final_results.txt  score.py  test_results.json
src/: bitmask.hpp  boolGen.hpp  dijkstra1.cpp  dijkstra2.cpp  prime.hpp  readInput.hpp
testing/: ex1.txt  ex2.txt  test  test.cpp
